
=== Documentation ===
==== API documentation ====
 * Clarified SobolIndicesExperiment page, notations now consistent with SobolIndicesAlgorithm page
 * Clarified SobolIndicesAlgorithm and (Saltellli|Martinez|MauntzKucherenko|Jansen)SensitivityAlgorithm pages, corrected formulas

=== Python module ===
 * Renamed Viewer *_kwargs arguments to *_kw (matplotlib convention)

=== Miscellaneous ===
 * Require C99/C++11 support
 * Do not compute Lagrange multipliers by default during an optimization

=== Bug fixes ===
 * #1001 (Add method SobolSimulationResult::draw)
 * #1259 (The diagonal of a scatter plot matrix should have the histograms)
 * #1267 (Some CSV files cannot be imported)
 * #1377 (The `setKnownParameter` method is not compatible with `buildEstimator`)
 * #1407 (GeneralLinearModelAlgorithm mishandles user-specified scale parameter when normalize is True)
 * #1421 (UserDefinedStationaryCovarianceModel doc suggests input dimension can be >1)
 * #1447 (Highly inaccurate result in reliability model when using subset of RandomVector)
 * #1465 (The Sample constructor based on a list and an integer should not exist)
 * #1474 (optimization defaults)
 * #1507 (Leak in Collection typemaps)
 * #1510 (ot.Ceres('LEVENBERG_MARQUARDT') and ot.Ceres('DOGLEG') do not handle bound constraints)
 * #1520 (The NLopt test is dubious)
 * #1521 (Basis of MonomialFunction)
 * #1540 (SubsetSampling: incorrect event sample)
 * #1549 (Doc of evaluation operator of KrigingResult)
 * #1553 (Optimization algorithms ignore MaxEvaluationNumber parameter in SORM)
 * #1556 (WeibullMin::computePDFGradient yields the partial derivatives in the wrong order)
 * #1564 (Set a Point makes ot crash)
 * #1567 (The API doc of SobolIndicesExperiment has a format issue)
 * #1573 (LinearModelAnalysis::drawQQPlot line is not the first bisector)
 * #1581 (LinearModelAlgorithm run() fails to parse Sample description)
 * #1594 (LinearLeastSquaresCalibration and CalibrationResult)

